# algoops-demo

./: .gitignore  LICENSE  README.md
docs/: architecture.drawio  summit-nomination.md
scripts/: demo.sh  seed.sh  smoke.sh
slides/: README.md  slides.html
slides/assets/themes/: algoops.css
source/agent/: .dockerignore  Dockerfile  pyproject.toml
source/agent/agent/: loader.py  main.py
source/agent/agent/prompts/: system.md
source/agent/agent/skills/benchmark-recsys/: SKILL.md
source/agent/agent/skills/model-eval-card/: SKILL.md
source/agent/agent/tools/: benchmark.py  candidate.py  reproduce.py
source/agent/tests/: test_benchmark.py  test_candidate.py  test_loader.py  test_main.py  test_reproduce.py  test_skills.py
source/infrastructure/: jest.config.js  package-lock.json  package.json  tsconfig.json
source/infrastructure/lambda/relay/: index.mjs
source/infrastructure/lib/: agent-stack.ts  webapp-stack.ts
source/infrastructure/test/: agent-stack.test.ts  webapp-stack.test.ts
source/web/: app.js  index.html
